--- a/templates/backend/dashboard/category/formEdit.twig
+++ b/templates/backend/dashboard/category/formEdit.twig
@@ -1,50 +1,45 @@
 {% extends 'backend/layouts/default.twig' %}
 
 {% block title %}
-    <title>Blog PHP : Catégorie : {{ category.title }}</title>
+    <title>Blog PHP : Catégorie {{ category.title }}</title>
 {% endblock %}
 
 {% block content %}
-
-    <div class="container-fluid mt-5 pt-5">
-        <div class="row">
-            <div class="col-md-2">
-                {% include 'backend/layouts/adminNavbar.twig' %}
-            </div>
-            <div class="col-md-10">
-                {% include 'backend/layouts/alert.twig' %}
-                <div class="card">
-                    <div class="card-header">
-                        Liste des articles
-                    </div>
-                    <form action="/dashboard/categories/update/" method="post"  enctype="multipart/form-data">
-                        <input type="hidden" class="form-control" id="id" name='id' value="{{ category.id }}">
-                        <div class="card-body">
-                            <section class=" mt-5">
-                                <div class="row">
-                                    <div class="col-md-7 col-sm-12">
-                                        <div class="form-group">
-                                            <label for="title">Titre de la catégorie</label>
-                                            <input type="text" class="form-control" id="title" name='title' value="{{ category.title }}" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="title">Slug</label>
-                                            <input type="text" class="form-control" id="title" name='slug' value="{{ category.slug }}" required>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section>
-                        </div>
-                        <div class="card-footer text-muted">
-                            <div class="d-flex justify-content-between">
-                                <a class="btn btn-danger" href="/dashboard/categories/{{ category.slug }}-{{ category.id }}/delete" role="button">Supprimer</a>
-                                <button type="submit" class="btn btn-success mr-2">Créer</button>
+    <div class="container my-5 pt-5">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/dashboard">Administration</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard/categories">Catégories</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Nouvelle catégorie</li>
+            </ol>
+        </nav>
+        {% include 'backend/layouts/alert.twig' %}
+        <form action="/dashboard/categories/update/" method="post"  enctype="multipart/form-data">
+            <input type="hidden" class="form-control" id="id" name='id' value="{{ post.id }}">
+            <div class="card-body">
+                <section class=" mt-5">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <div class="form-group">
+                                <label for="title">TITRE</label>
+                                <input type="text" class="form-control" id="title" name='title' value="{{ category.title }}" required>
                             </div>
                         </div>
-                    </form>
+                        <div class="col-md-6 col-sm-12">
+                            <div class="form-group">
+                                <label for="title">SLUG</label>
+                                <input type="text" class="form-control" id="title" name='slug' value="{{ category.slug }}" required>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-end">
+                    <a class="btn btn-outline-danger" href="/dashboard/categories/{{ category.slug }}-{{ category.id }}/delete" role="button">Supprimer</a>
+                    <input class="btn btn-primary ml-2" type="submit" value="Modifier">
                 </div>
             </div>
-        </div>
+        </form>
     </div>
-
 {% endblock %}
