--- a/templates/backend/dashboard/comment/index.twig
+++ b/templates/backend/dashboard/comment/index.twig
@@ -1,49 +1,48 @@
 {% extends 'backend/layouts/default.twig' %}
 
 {% block title %}
-    <title>Blog PHP : Liste des commentaires</title>
+    <title>Blog PHP : Gestion des commentaires</title>
 {% endblock %}
 
 {% block content %}
-
-    <div class="container-fluid mt-5 pt-5">
-        <div class="row">
-            <div class="col-md-12 col-lg-3">
-                {% include 'backend/layouts/adminNavbar.twig' %}
-            </div>
-            <div class="col-md-12 col-lg-9">
-                {% include 'backend/layouts/alert.twig' %}
-                <div class="card">
-                    <div class="card-header">
-                        Liste des commentaires en attente de validation
-                    </div>
-                    <div class="card-body">
-                       {% for post in posts %}
-                           {% for comment in post.comments %}
-                               {% if comment.isValidated == 0 %}
-                                   <h5 class="card-title">{{ post.title }}</h5>
-                                   <p class="card-text">{{ comment.content }}</p>
-
-                                   <div class="d-flex justify-content-between">
-                                       <div>
-                                           <small class="mr-1">{{ comment.author.firstName }} {{ comment.author.lastName }},</small>
-                                           <small>{{ comment.createdAt | dateFR }}</small>
-                                       </div>
-                                       <div>
-                                           <a href="/dashboard/commentaires/{{ comment.id }}/update" class="card-link text-success"><i class="fas fa-check"></i></a>
-                                           <a href="/dashboard/commentaires/{{ comment.id }}/delete" class="card-link text-danger"><i class="far fa-trash-alt"></i> Supprimer</a>
-                                       </div>
-                                   </div>
-                                   <hr>
-                               {% endif %}
-                            {% endfor %}
+    <div class="container mt-5 pt-5">
+        <h4 class="mb-3">Gestion des commentaires</h4>
+        {% include 'backend/layouts/alert.twig' %}
+        <div class="card">
+            <div class="card-body">
+                <table class="table table-borderless">
+                    <thead>
+                    <tr>
+                        <th scope="col">Article</th>
+                        <th scope="col">Commentaire</th>
+                        <th scope="col">Utilisateur</th>
+                        <th scope="col" colspan="2" class="text-right">Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for post in posts %}
+                        {% for comment in post.comments %}
+                            {% if comment.isValidated == 0 %}
+                                <tr>
+                                    <td>{{ post.title }}</td>
+                                    <td>{{ comment.content }}</td>
+                                    <td>{{ comment.author.firstName }} {{ comment.author.lastName }}</td>
+                                    <td class="text-right text-secondary">
+                                        <a class="btn-link text-success" href="/dashboard/commentaires/{{ comment.id }}/update" role="button"><i class="fas fa-check"></i></a>
+                                    </td>
+                                    <td class="text-right">
+                                        <a class="btn-link text-danger" href="/dashboard/commentaires/{{ comment.id }}/delete" role="button"><i class="far fa-trash-alt"></i></a>
+                                    </td>
+                                </tr>
+                            {% endif %}
                         {% endfor %}
-                        {{ pagination | raw }}
-                    </div>
-                </div>
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
+        <div class="d-flex justify-content-end mb-3">
+            {{ pagination | raw }}
+        </div>
     </div>
-
-
 {% endblock %}
