--- a/templates/backend/dashboard/post/formEdit.twig
+++ b/templates/backend/dashboard/post/formEdit.twig
@@ -5,82 +5,90 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="container-fluid mt-5 pt-5">
-        <div class="row">
-            <div class="col-md-2">
-                {% include 'backend/layouts/adminNavbar.twig' %}
-            </div>
-            <div class="col-md-10">
-                {% include 'backend/layouts/alert.twig' %}
-                <div class="card">
-                    <div class="card-header">
-                        Liste des articles
-                    </div>
-                    <form action="/dashboard/articles/update/" method="post"  enctype="multipart/form-data">
-                        <input type="hidden" class="form-control" id="id" name='id' value="{{ post.id }}">
-                        <div class="card-body">
-                            <section class=" mt-5">
-                                <div class="row">
-                                    <div class="col-md-5 col-sm-12">
-                                        <img src="/uploads/posts/{{ post.image }}" alt="..." class="img-thumbnail img-crop-thumb">
-                                        <div class="form-group mt-3">
-                                            <label>Image</label>
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="imagePost" name="image_post">
-                                                <label class="custom-file-label" for="imagePost">Sélectionner un fichier</label>
-                                                <input type="hidden" name="MAX_FILE_SIZE" value="100000">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Catégories</label>
-                                            <select class="custom-select" name="category_id">
-                                                {% for category in categories %}
-                                                <option value="{{ category.id }}" {% if category.id == post.categoryId %} selected {% endif %}>
-                                                    {{ category.title }}
-                                                </option>
-                                                {% endfor %}
-                                            </select>
-                                        </div>
-                                        <p>
-                                            Crée par : <b>{{ post.author.firstName }} {{ post.author.lastName }}</b>
-                                            <br><br>
-                                            Posté le : <b>{{ post.createdAt | dateFR }}</b>
-                                            <br>
-                                            Mise à jour le : <b>{% if post.updatedAt %} {{ post.updatedAt | dateFR }} {% endif %}</b>
-                                        </p>
-                                    </div>
-                                    <div class="col-md-7 col-sm-12">
-                                        <div class="form-group">
-                                            <label for="title">Titre de l'article</label>
-                                            <input type="text" class="form-control" id="title" name='title' value="{{ post.title }}" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="title">Slug</label>
-                                            <input type="text" class="form-control" id="title" name='slug' value="{{ post.slug }}" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="chapo">Introduction</label>
-                                            <textarea class="form-control" id="chapo" name='description' rows="2" required>{{ post.description }}</textarea>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="content">Contenu de l'article</label>
-                                            <textarea class="form-control" id="content" rows="10" name="content" required>{{ post.content }}</textarea>
-                                        </div>
+    <div class="container my-5 pt-5">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/dashboard">Administration</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard/articles">Articles</a></li>
+                <li class="breadcrumb-item active" aria-current="page">{{ post.title | lower }}</li>
+            </ol>
+        </nav>
+        {% include 'backend/layouts/alert.twig' %}
+        <form action="/dashboard/articles/update/" method="post"  enctype="multipart/form-data">
+            <input type="hidden" class="form-control" id="id" name='id' value="{{ post.id }}">
+            <div class="card-body">
+                <section class=" mt-5">
+                    <div class="row">
+                        <div class="col-md-5 col-sm-12">
+                            <div class="form-group">
+                                <label for="picture">IMAGE</label>
+                                <img src="/uploads/posts/{{ post.image }}" alt="{{ post.image }}" class="img-thumbnail img-crop-thumb">
+                                <div class="form-group mt-2">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="imagePost" name="image_post">
+                                        <label class="custom-file-label" for="imagePost">Sélectionner un fichier</label>
+                                        <input type="hidden" name="MAX_FILE_SIZE" value="100000">
                                     </div>
                                 </div>
-                            </section>
-                        </div>
-                        <div class="card-footer text-muted">
-                            <div class="d-flex justify-content-between">
-                                <a class="btn btn-danger" href="/dashboard/articles/{{ post.slug }}-{{ post.id }}/delete" role="button">Supprimer</a>
-                                <button type="submit" class="btn btn-success mr-2">Créer</button>
+                            </div>
+                            <div class="form-group">
+                                <label>CATÉGORIE</label>
+                                <select class="custom-select" name="category_id">
+                                    {% for category in categories %}
+                                        <option value="{{ category.id }}" {% if category.id == post.categoryId %} selected {% endif %}>
+                                            {{ category.title }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="card">
+                                <div class="card-body">
+                                    <p>
+                                        <span class="text-secondary">Crée par : </span>{{ post.author.firstName }} {{ post.author.lastName }}
+                                        <br>
+                                        <span class="text-secondary">Posté le : </span>{{ post.createdAt | dateFR }}
+                                        <br>
+                                        {% if post.updatedAt %}
+                                        <span class="text-secondary">Mise à jour le : </span>{{ post.updatedAt | dateFR }}
+                                        {% endif %}
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </form>
+                        <div class="col-md-7 col-sm-12">
+                            <div class="form-group">
+                                <div class="custom-control custom-switch">
+                                    <input type="checkbox" class="custom-control-input" id="customSwitch1" name="is_validated" {% if post.isValidated == 1 %} checked {% endif %}>
+                                    <label class="custom-control-label" for="customSwitch1">{% if post.isValidated == 1 %} Activer {% else %} Désactiver {% endif %}</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="title">TITRE</label>
+                                <input type="text" class="form-control" id="title" name='title' value="{{ post.title }}" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="title">SLUG</label>
+                                <input type="text" class="form-control" id="title" name='slug' value="{{ post.slug }}" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="chapo">INTRODUCTION</label>
+                                <textarea class="form-control" id="chapo" name='description' rows="2" required>{{ post.description }}</textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="content">CONTENU</label>
+                                <textarea class="form-control" id="content" rows="10" name="content" required>{{ post.content }}</textarea>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-end">
+                    <a class="btn btn-outline-danger" href="/dashboard/articles/{{ post.slug }}-{{ post.id }}/delete" role="button">Supprimer</a>
+                    <input class="btn btn-primary ml-2" type="submit" value="Modifier">
                 </div>
             </div>
-        </div>
+        </form>
     </div>
-
 {% endblock %}
