--- a/templates/backend/layouts/adminNavbar.twig
+++ b/templates/backend/layouts/adminNavbar.twig
@@ -1,28 +1,20 @@
-
-<ul class="list-group mb-3">
-    <a href="/dashboard/articles" class="list-group-item list-group-item-action">
-        <li class="d-flex justify-content-between align-items-center">
-            <span><i class="fas fa-clipboard"></i> Articles</span>
-        </li>
-    </a>
-    <a href="/dashboard/categories" class="list-group-item list-group-item-action">
-        <li class="d-flex justify-content-between align-items-center">
-            <span><i class="fas fa-tags"></i> Catégories</span>
-        </li>
-    </a>
-    <a href="/dashboard/utilisateurs" class="list-group-item list-group-item-action">
-        <li class="d-flex justify-content-between align-items-center">
-            <span><i class="fas fa-user-friends"></i> Utilisateurs</span>
-        </li>
-    </a>
-    <a href="/dashboard/commentaires" class="list-group-item list-group-item-action">
-        <li class="d-flex justify-content-between align-items-center">
-            <span><i class="fas fa-comment-alt"></i> Commentaires</span>
-        </li>
-    </a>
-</ul>
-
-
-
+<div class="card">
+    <div class="card-body">
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link text-secondary" href="#">Articles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-secondary" href="#">Catégories</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-secondary" href="#">Utilisateurs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-secondary" href="#">Commentaires</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 
