--- a/templates/frontend/home/hero.twig
+++ b/templates/frontend/home/hero.twig
@@ -8,9 +8,9 @@
                 et je vis en région parisienne. À travers ce blog je souhaite partager mon nouveau défi, <b>devenir
                     développeur d’applications web (FullStack).</b>
             </p>
-            <a class="btn btn-outline-primary mb-1" href="#"><i class="fab fa-github"></i> Dépôt Github</a>
-            <a class="btn btn-outline-primary mb-1" href="#"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
-            <a class="btn btn-outline-primary   mb-1" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+            <a class="btn btn-outline-dark mb-1" href="#"><i class="fab fa-github"></i> Dépôt Github</a>
+            <a class="btn btn-outline-dark mb-1" href="#"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+            <a class="btn btn-outline-dark mb-1" href="#"><i class="fab fa-instagram"></i> Instagram</a>
         </div>
         <div class="col-md-4 mb-5">
             <h2>Contactez moi</h2>
@@ -26,7 +26,7 @@
                 (+33) 6 64 83 28 68
                 <br>
                 <abbr title="Email"><i class="fas fa-envelope"></i></abbr>
-                <a href="mailto:#">hello@lechatgraphique.fr</a>
+                <a href="mailto:#" class="text-dark">hello@lechatgraphique.fr</a>
             </address>
         </div>
     </div>
