--- a/templates/layouts/footer.twig
+++ b/templates/layouts/footer.twig
@@ -1,3 +1,6 @@
+<pre>
+    {{ dump(session) }}
+</pre>
 <footer class="py-3 bg-dark fixed-bottom">
     <div class="container">
         <small class="m-0 text-white">Copyright &copy; Projet 5 OCR • Blog PHP 2020 </small>
