--- a/templates/frontend/contact/index.twig
+++ b/templates/frontend/contact/index.twig
@@ -55,7 +55,7 @@
                                 (+33) 6 64 83 28 68
                                 <br>
                                 <abbr title="Email"><i class="fas fa-envelope"></i></abbr>
-                                <a href="mailto:#">hello@lechatgraphique.fr</a>
+                                <a href="mailto:#" class="text-dark">hello@lechatgraphique.fr</a>
                             </address>
                         </div>
                     </div>
