--- a/templates/frontend/home/header.twig
+++ b/templates/frontend/home/header.twig
@@ -1,9 +1,9 @@
-<header class="bg-primary py-5 mb-5">
+<header class="bg-light py-5 mb-5">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-lg-12">
-                <h1 class="display-4 text-white mt-5 mb-2">Hi ! Moi c'est Bastien.</h1>
-                <p class="lead mb-5 text-white-50">
+                <h1 class="display-4 mt-5 mb-2">Hello World.</h1>
+                <p class="lead mb-5">
                     Projet 5 de mon parcours Développeur d'application PHP/Symfony chez OpenClassrooms. Création d'un Blog via une architecture MVC Orienté objet.
                 </p>
             </div>
