--- a/templates/frontend/home/index.twig
+++ b/templates/frontend/home/index.twig
@@ -11,30 +11,34 @@
     {% include 'frontend/home/hero.twig' %}
     <div class="container">
         <div class="row">
-        {% for post in posts %}
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-                    <div class="card-body">
-                        <a href="articles/{{ post.slug }}-{{ post.id }}"><h4 class="card-title">{{ post.title }}</h4></a>
-                        <p class="card-text">{{ post.description | truncate(100) }}</p>
-                        <small>
-                            <i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">{{ post.category.title }}</a>
-                        </small>
-                    </div>
-                    <div class="card-footer">
-                        <small><div>Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b></div></small>
-                        <small>
-                            <i class="far fa-calendar-alt"></i> {{ post.createdAt | dateFR }} |
-                            <i class="far fa-comments"></i> {{ post.comments | length }}
-                        </small>
+            {% for post in posts %}
+                {% if post.isValidated %}
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <img class="card-img-top img-crop-thumb" src="/uploads/posts/{{ post.image }}" alt="{{ post.image }}">
+                        <div class="card-body">
+                            <a href="articles/{{ post.slug }}-{{ post.id }}"><h4 class="card-title text-dark">{{ post.title }}</h4></a>
+                            <p class="card-text">{{ post.description | truncate(100) }}</p>
+                            {% if post.category %}
+                            <small>
+                                <i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">{{ post.category.title }}</a>
+                            </small>
+                            {% endif %}
+                        </div>
+                        <div class="card-footer">
+                            <small><div>Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b></div></small>
+                            <small>
+                                <i class="far fa-calendar-alt"></i> {{ post.createdAt | dateFR }} |
+                                <i class="far fa-comments"></i> {{ post.comments | length }}
+                            </small>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+                {% endif %}
+            {% endfor %}
         </div>
         <div class="d-flex justify-content-center mb-5">
-            <a href="" type="button" class="btn btn-light btn-lg">Voir plus d'articles</a>
+            <a href="/articles" type="button" class="btn btn-light btn-lg">Voir plus d'articles</a>
         </div>
     </div>
 
