--- a/templates/frontend/inscription/header.twig
+++ b/templates/frontend/inscription/header.twig
@@ -1,9 +1,9 @@
-<header class="bg-primary py-5 mb-5">
+<header class="bg-light py-5 mb-5">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-lg-12">
-                <h1 class="display-4 text-white mt-5 mb-2">Inscription</h1>
-                <p class="lead mb-5 text-white-50">
+                <h1 class="display-4 mt-5 mb-2">Inscription</h1>
+                <p class="lead mb-5 ">
                     En vous inscrivant sur ce site, vous acceptez nos conditions d’utilisation et notre politique de confidentialité.
                 </p>
             </div>
