--- a/templates/frontend/login/form.twig
+++ b/templates/frontend/login/form.twig
@@ -1,10 +1,10 @@
-<form class="mb-5" action="/connexion/login/" method="POST">
+<form class="" action="/connexion/login/" method="POST">
     <div class="row">
         <div class="col-sm-12">
             <fieldset>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" required>
+                    <input type="email" id="email" name="username" class="form-control" required>
                 </div>
             </fieldset>
         </div>
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col-sm-12">
             <input type="hidden" value="" name="id">
-            <small class="form-text text-center text-muted mt-3"><b>Mot de passe perdu ?</b> <a href="#" class="text-secondary"> Réinitialiser votre mot de passe.</a></small>
+
         </div>
     </div>
 </form>
