--- a/templates/frontend/login/header.twig
+++ b/templates/frontend/login/header.twig
@@ -1,10 +1,10 @@
-<header class="bg-primary py-5 mb-5">
+<header class="bg-light py-5 mb-5">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-lg-12">
-                <h1 class="display-4 text-white mt-5 mb-2">Connexion</h1>
-                <p class="lead mb-5 text-white-50">
-                    Si vous n'avez pas de compte :<a href="#" class="text-white-50"> Inscrivez-vous</a>.</p>
+                <h1 class="display-4 mt-5 mb-2">Connexion</h1>
+                <p class="lead mb-5">
+                    Si vous n'avez pas de compte :<a href="/inscription" class="text-dark"> Inscrivez-vous</a>.</p>
                 </p>
             </div>
         </div>
