--- a/templates/frontend/post/index.twig
+++ b/templates/frontend/post/index.twig
@@ -6,28 +6,33 @@
 
 {% block content %}
 
-    <header class="bg-primary py-5 mb-5">
+    <header class="bg-light py-5 mb-5">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-lg-12">
-                    <h1 class="display-4 text-white mt-5 mb-2">Liste des articles</h1>
+                    <h1 class="display-4 mt-5 mb-2">Liste des articles</h1>
+                    <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium amet, blanditiis dicta eos eum incidunt laudantium molestias nam neque nostrum odio possimus quaerat quod,
+                        reiciendis repudiandae similique tempora voluptates?</p>
                 </div>
             </div>
         </div>
     </header>
 
-    <div class="container">
+    <div class="container mb-4">
         <div class="row">
             {% for post in posts %}
+                {% if post.isValidated %}
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
-                        <img class="card-img-top img-crop-thumb" src="/uploads/posts/{{ post.image }}" alt="">
+                        <img class="card-img-top img-crop-thumb" src="/uploads/posts/{{ post.image }}" alt="{{ post.image }}">
                         <div class="card-body">
-                            <a href="articles/{{ post.slug }}-{{ post.id }}"><h4 class="card-title">{{ post.title }}</h4></a>
+                            <a href="articles/{{ post.slug }}-{{ post.id }}"><h4 class="card-title text-dark">{{ post.title }}</h4></a>
                             <p class="card-text">{{ post.description | truncate(100) }}</p>
-                            <small>
-                                <i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">{{ post.category.title }}</a>
-                            </small>
+                            {% if post.category %}
+                                <small>
+                                    <i class="fas fa-tags"></i> <a class=" btn-link text-dark" href="#" role="button">{{ post.category.title }}</a>
+                                </small>
+                            {% endif %}
                         </div>
                         <div class="card-footer">
                             <small><div>Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b></div></small>
@@ -38,8 +43,10 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
             {% endfor %}
         </div>
+        {{ pagination | raw }}
     </div>
 
 {% endblock %}
