--- a/templates/layouts/navbar.twig
+++ b/templates/layouts/navbar.twig
@@ -18,13 +18,31 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="far fa-file-pdf"></i> CV</a>
                 </li>
+               {%  if session == null  %}
                 <li class="nav-item">
-                    <a class="btn btn-outline-light" href="inscription" role="button">Inscription</a>
+                    <a class="btn btn-outline-light" href="/inscription" role="button">Inscription</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-link text-white" href="connexion" role="button"><i class="far fa-user"></i></a>
+                    <a class="btn btn-outline-light ml-2" href="/connexion" role="button"><i class="far fa-user"></i></a>
                 </li>
+               {% else %}
+                   <div class="btn-group ml-2">
+                       <button type="button" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                           <i class="far fa-user"></i>
+                       </button>
+                       <div class="dropdown-menu dropdown-menu-right">
+                           {% if session.role == 'ADMINISTRATOR' %}
+                           <a class="dropdown-item" href="/dashboard"><i class="fas fa-tachometer-alt mr-2"></i>Dashboard</a>
+                           <hr>
+                           {% endif %}
+                           <a class="dropdown-item" href="/profil/{{ session.id }}"><i class="fas fa-user-cog mr-2"></i>Profil</a>
+                           <hr>
+                           <a class="dropdown-item text-danger" href="/deconnexion"><i class="fas fa-sign-out-alt mr-2"></i>Déconnexion</a>
+                       </div>
+                   </div>
+                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
+
