remove accent slug

--- a/templates/backend/dashboard/category/formCreate.twig
+++ b/templates/backend/dashboard/category/formCreate.twig
@@ -19,16 +19,15 @@
             <div class="card-body">
                 <section class=" mt-5">
                     <div class="row">
-                        <div class="col-md-6 col-sm-12">
+                        <div class="col-md-12 col-sm-12">
                             <div class="form-group">
                                 <label for="title">TITRE</label>
                                 <input type="text" class="form-control" id="title" name='title' value="" required>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-12">
+                        <div class="col-sm-12">
                             <div class="form-group">
-                                <label for="title">SLUG</label>
-                                <input type="text" class="form-control" id="title" name='slug' value="" required>
+                                <input type="hidden" class="form-control" id="title" name='slug' value="" required>
                             </div>
                         </div>
                     </div>
