--- a/templates/backend/dashboard/post/formCreate.twig
+++ b/templates/backend/dashboard/post/formCreate.twig
@@ -48,8 +48,7 @@
                                 <input type="text" class="form-control" id="title" name='title' value="" required>
                             </div>
                             <div class="form-group">
-                                <label for="title">SLUG</label>
-                                <input type="text" class="form-control" id="title" name='slug' value="" required>
+                                <input type="hidden" class="form-control" id="title" name='slug' value="">
                             </div>
                             <div class="form-group">
                                 <label for="chapo">INTRODUCTION</label>
